# polars-pipe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
dev_tools/: update_readme.py
src/polars_pipe/adapters/: io_funcs.py  io_pl.py
src/polars_pipe/core/: config.py  derive_cols.py  inspect.py  logger.py  transform.py  validation.py
src/polars_pipe/services/: basic_pipeline.py  derive_cols.py  derived_cols.py
tests/: conftest.py
tests/adapters/: test_wrapper_apis.py
tests/core/: test_derive_cols.py  test_inspect.py  test_transform.py  test_validation.py
tests/services/: test_basic_pipeline.py
