[project]
name = "polars-pipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.4.0",
    "hypothesis>=6.142.0",
    "polars>=1.34.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "repo-mapper-rs>=0.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]
